# Orange

./: CMakeLists.txt
shaders/: cube.frag  cube.vert
src/: main.cpp  model.cpp  model.hpp
